--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
-ATLAS_URI=mongodb+srv://<username>:<password>@sandbox.jadwj.mongodb.net/meanStackExample?retryWrites=true&w=majority
+MONGO_DB_USERNAME=USERNAMENAME
+MONGO_DB_PASSWORD=PASSWORD
+MONGO_DB_HOST=HOST
